Correct toggle styles when wrapping on new line

--- a/public/styles.css
+++ b/public/styles.css
@@ -50,13 +50,14 @@ body {
 
 .chart__toggles {
   display: flex;
-  justify-content: left;
-  margin: 8px 16px;
+  justify-content: center;
+  margin: 8px 16px 0 16px;
+  flex-wrap: wrap;
 }
 
 .toggle {
   cursor: pointer;
-  margin: 0 16px 0 0;
+  margin: 0 16px 8px 0;
   display: flex;
 }
 
@@ -77,6 +78,8 @@ body {
   background-color: #eee;
   padding: 8px;
   color: #999;
+  display: flex;
+  align-items: center;
 }
 
 .toggle__left--selected, .toggle__right--selected {
